--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="etc"/>
+	<classpathentry kind="src" path="webinterface/webroot"/>
 	<classpathentry kind="src" path="jd3lib"/>
 	<classpathentry kind="src" path="jgoodies/src"/>
 	<classpathentry kind="src" path="src"/>
@@ -12,6 +13,6 @@
 	<classpathentry kind="src" path="jwf"/>
 	<classpathentry kind="src" path="systray"/>
 	<classpathentry kind="lib" path="xmlrpc"/>
-	<classpathentry kind="lib" path="/PowerFolder/webinterface/velocity"/>
+	<classpathentry kind="lib" path="webinterface/velocity"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
