plugin preferences tab i18n

--- a/etc/Translation.properties
+++ b/etc/Translation.properties
@@ -733,3 +733,12 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
+
+preferences.dialog.pluginsettings.tabname=Plugin Settings
+preferences.dialog.pluginsettings.pluginname=Name
+preferences.dialog.pluginSettings.plugindescription=Description
+preferences.dialog.pluginSettings.pluginclassname=Java classname
+
+pluginsettings.description=Open the settings for this plugin
+pluginsettings.key=S
+pluginsettings.name=Settings
