--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/jd3lib"/>
+	<classpathentry kind="src" path="src/jgoodies"/>
 	<classpathentry kind="src" path="src/etc"/>
 	<classpathentry kind="src" path="src/commons"/>
 	<classpathentry kind="src" path="src/systray"/>
@@ -8,7 +9,6 @@
 	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="src" path="src/main"/>
 	<classpathentry kind="src" path="webinterface/webroot"/>
-	<classpathentry kind="src" path="jgoodies/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="jgoodies/lib"/>
 	<classpathentry kind="lib" path="xmlrpc"/>
