Again NPE fix and Initial implementation of http://dev.powerfolder.com/projects/powerfolder/ticket/185

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -742,3 +742,5 @@ preferences.dialog.pluginSettings.pluginclassname=Java classname
 pluginsettings.description=Open the settings for this plugin
 pluginsettings.key=S
 pluginsettings.name=Settings
+
+folderpanel.hometab.synchronisation_eta=Synchronisation ETA
