--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -744,3 +744,14 @@ pluginsettings.key=S
 pluginsettings.name=Settings
 
 folderpanel.hometab.synchronisation_eta=Synchronisation ETA
+plugin_enable.name=Enable
+plugin_enable.key=E
+plugin_enable.description=Enable (and start) Plugin
+
+plugin_disable.name=Disable
+plugin_disable.key=D
+plugin_disable.description=Disable (and stop) Plugin
+preferences.dialog.pluginSettings.pluginstatus=Status
+preferences.dialog.pluginSettings.pluginstatus_enabled=Enabled
+preferences.dialog.pluginSettings.pluginstatus_disabled=Disabled
+
