--- a/src/test-resources/Controller1.config
+++ b/src/test-resources/Controller1.config
@@ -1,10 +1,11 @@
 #PowerFolder config file (v0.9.3 devel)
 #Mon Apr 17 00:47:18 CEST 2006
+nodeid=randomstring1
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
 nick=TestController1
 port=45678
-verbose=false
+verbose=true
 disableui=true
 publicnetworking=false
 uploadlimit=0
