--- a/src/test-resources/Controller2.config
+++ b/src/test-resources/Controller2.config
@@ -1,5 +1,6 @@
 #PowerFolder config file (v0.9.3 devel)
 #Mon Apr 17 00:47:19 CEST 2006
+nodeid=randomstring2
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
 nick=TestController2
@@ -7,3 +8,4 @@ port=56789
 disableui=true
 publicnetworking=false
 uploadlimit=0
+verbose=false
