--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -446,7 +446,6 @@ openfile.name=Open file
 preferences.description=Opens the preferences
 preferences.dialog.advPort=Port
 preferences.dialog.advPort.tooltip=Enter a ","-separated list of ports PowerFolder should listen for connections
-preferences.dialog.advancedSettingsTabbedPane=Advanced Settings
 preferences.dialog.autostartleechfiles=Autostart external P2P
 preferences.dialog.basedir=Basedir for folders
 preferences.dialog.basedir.title=Choose default base folder
@@ -460,7 +459,6 @@ preferences.dialog.dyndns=my (dynamic) DNS
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 preferences.dialog.dyndnsCurrentIP=Current IP
 preferences.dialog.dyndnsHostname=Hostname
-preferences.dialog.dyndnsInfoTabbedPane=DynDns Info
 preferences.dialog.dyndnsLoginPanel=Login
 preferences.dialog.dyndnsPassword=Password
 preferences.dialog.dyndnsSettingsTabbedPane=DynDns Settings
@@ -474,14 +472,13 @@ preferences.dialog.dyndnsUpdatedIP=Updated DynDns IP
 preferences.dialog.dyndnsUserName=Username
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
-preferences.dialog.generalTabbedPane=General Settings
 preferences.dialog.language=Language
 preferences.dialog.lanlinesettings=LAN Connection speed
 preferences.dialog.linesettings=Inet Connection speed
 preferences.dialog.nickname=Nickname
 preferences.dialog.nonwindowsinfo=Attention\: Some settings are only available on Windows systems
 preferences.dialog.privatenetworking=Private networking
-preferences.dialog.privatenetworking.tooltip=Restricts connectivity to interesting users only.\nActually only connects to friends, user on LAN and people, how are on joined folders
+preferences.dialog.privatenetworking.tooltip=<HTML><BODY>Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, how are on joined folders</BODY></HTML>
 preferences.dialog.restarttext=Some changes require to restart PowerFolder.\nDo you want to restart now ?\n 
 preferences.dialog.restarttitle=Restart requested
 preferences.dialog.statusCantResolve=DynDns {0}\: cannot be resolved\!
@@ -734,10 +731,10 @@ wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
 
-preferences.dialog.pluginsettings.tabname=Plugin Settings
-preferences.dialog.pluginsettings.pluginname=Name
-preferences.dialog.pluginSettings.plugindescription=Description
-preferences.dialog.pluginSettings.pluginclassname=Java classname
+preferences.dialog.plugin.title=Plugin
+preferences.dialog.plugin.name=Name
+preferences.dialog.plugin.description=Description
+preferences.dialog.plugin.classname=Java classname
 
 pluginsettings.description=Open the settings for this plugin
 pluginsettings.key=S
@@ -751,7 +748,16 @@ plugin_enable.description=Enable (and start) Plugin
 plugin_disable.name=Disable
 plugin_disable.key=D
 plugin_disable.description=Disable (and stop) Plugin
-preferences.dialog.pluginSettings.pluginstatus=Status
-preferences.dialog.pluginSettings.pluginstatus_enabled=Enabled
-preferences.dialog.pluginSettings.pluginstatus_disabled=Disabled
+preferences.dialog.plugin.status=Status
+preferences.dialog.plugin.status_enabled=Enabled
+preferences.dialog.plugin.status_disabled=Disabled
 
+preferences.dialog.network.title=Network
+preferences.dialog.advanced.title=Advanced
+preferences.dialog.dyndns.title=DynDNS
+preferences.dialog.general.title=General
+preferences.dialog.showadvanged=Show Advanged Preferences
+preferences.dialog.showpreviewpanel=Enable internal image preview
+preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
+preferences.dialog.lanonly=LAN only
+preferences.dialog.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site and your firewall<BR>will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET,<BR>we use that to detect the other PowerFolder clienst in your LAN.</BODY></HTML>   
