Split up Find Friends and Friendlist panel

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,12 @@
 # http://www.powerfolder.com
 #
 
+general.friendlist=Friendlist
+
+findfriends.name=Find new Friends
+findfriends.key=F
+findfriends.description=Start searching for new friends
+
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
@@ -645,6 +651,8 @@ title.public.folder=Public Folder
 title.public.folders=Public Folders
 title.search.users=Search Users
 
+
+
 transfers.completed=completed
 transfers.eta=ETA
 transfers.from=From
@@ -751,6 +759,8 @@ plugin_disable.description=Disable (and stop) Plugin
 preferences.dialog.plugin.status=Status
 preferences.dialog.plugin.status_enabled=Enabled
 preferences.dialog.plugin.status_disabled=Disabled
+
+title.friends=Friends
 
 preferences.dialog.network.title=Network
 preferences.dialog.advanced.title=Advanced
