--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -649,7 +649,7 @@ title.my.folders=My Folders
 title.network.statistics=Network Statistics
 title.public.folder=Public Folder
 title.public.folders=Public Folders
-title.search.users=Search Users
+title.search.users=Find Friends
 
 
 
