#235 - Minor other changes

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,7 +17,9 @@
 # http://www.powerfolder.com
 #
 
+
 general.friendlist=Friendlist
+
 
 findfriends.name=Find new Friends
 findfriends.key=F
@@ -209,7 +211,7 @@ folder.members.synchronisation_panel.title=Member Sync Status
 foldercreate.description=Creates a new shared folder
 foldercreate.dialog.saveinvitation=Save an invitation in the folder
 foldercreate.dialog.settings=Enter the settings for the new shared folder
-foldercreate.dialog.title=Share a new Folder
+foldercreate.dialog.title=Create new Folder
 foldercreate.dirempty.text=Base directory of folder should not be empty
 foldercreate.dirempty.title=Folder base directory required
 foldercreate.error.already_taken=Base directory already taken by folder '{0}'\n'{1}'
@@ -217,10 +219,11 @@ foldercreate.error.it_is_base_dir=Unable to open folder on directory '{0}'. It i
 foldercreate.error.unable_to_create=Unable to create directory '{0}'
 foldercreate.error.unable_to_open=Unable to open local directory '{0}'. Seems to be a file \!
 foldercreate.key=s
-foldercreate.name=Share a Folder
+foldercreate.name=New Folder
 foldercreate.nameempty.text=Name of folder should not be empty
 foldercreate.nameempty.title=Foldername required
 foldercreate.success=Folder {0} shared, local copy at '{1}'
+foldercreate.progress.text=Creating Folder '{0}'
 
 folderexception.dialog.text=Unable to join to join folder '{0}'.\nReason\: {1}
 folderexception.dialog.title=Problem with folder '{0}'
