Not longer looses selection on disc/connection

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -283,6 +283,7 @@ friendsearch.nodetable.name=Name
 friendsearch.nodetable.on_local_network=On Lan
 
 friendspanel.currently_online=Currently online
+friendspanel.connected=Connected
 friendspanel.n_a=n/a
 friendspanel.search_for_user=Search for user
 friendspanel.search_results=Search results
