NetWorkingMode lanonly/private/public mode now in dropdown in prefrences and in Wizard. NetWorkingMode now an enum NodeManger UI stuff moved to MemberUI class NodeManager now does not use the ListenerSupport anymore

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -484,11 +484,10 @@ preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.language=Language
 preferences.dialog.lanlinesettings=LAN Connection speed
-preferences.dialog.linesettings=Inet Connection speed
+preferences.dialog.linesettings=Internet Connection speed
 preferences.dialog.nickname=Nickname
 preferences.dialog.nonwindowsinfo=Attention\: Some settings are only available on Windows systems
-preferences.dialog.privatenetworking=Private networking
-preferences.dialog.privatenetworking.tooltip=<HTML><BODY>Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, how are on joined folders</BODY></HTML>
+
 preferences.dialog.restarttext=Some changes require to restart PowerFolder.\nDo you want to restart now ?\n 
 preferences.dialog.restarttitle=Restart requested
 preferences.dialog.statusCantResolve=DynDns {0}\: cannot be resolved\!
@@ -773,5 +772,11 @@ preferences.dialog.general.title=General
 preferences.dialog.showadvanged=Show Advanged Preferences
 preferences.dialog.showpreviewpanel=Enable internal image preview
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
-preferences.dialog.lanonly=LAN only
-preferences.dialog.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site and your firewall<BR>will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET,<BR>we use that to detect the other PowerFolder clienst in your LAN.</BODY></HTML>   
+
+preferences.dialog.networkmode.private=Private Networking   
+preferences.dialog.networkmode.public=Public Networking
+preferences.dialog.networkmode.lanonly=LAN only
+preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so so the finding of your friends in the network is posible.</BODY></HTML>
+preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
+preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+wizard.basicsetup.lanonly=LAN only
