Renamed controller1 to Bart and controller2 to Lisa

--- a/src/test-resources/ControllerBart.config
+++ b/src/test-resources/ControllerBart.config
@@ -1,14 +1,13 @@
 #PowerFolder config file (v0.9.3 devel)
-#Mon Apr 17 00:47:19 CEST 2006
-nodeid=randomstring2
+#Mon Apr 17 00:47:18 CEST 2006
+nodeid=randomstringBart
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
-nick=TestController2
-port=56789
+nick=Bart
+port=45678
+verbose=true
 disableui=true
 publicnetworking=false
 uploadlimit=0
-verbose=false
 disablebroadcasts=true
-disablercon=true
 lanOnly=true
