--- a/src/test-resources/ControllerLisa.config
+++ b/src/test-resources/ControllerLisa.config
@@ -1,13 +1,14 @@
 #PowerFolder config file (v0.9.3 devel)
-#Mon Apr 17 00:47:18 CEST 2006
-nodeid=randomstring1
+#Mon Apr 17 00:47:19 CEST 2006
+nodeid=randomstringLisa
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
-nick=TestController1
-port=45678
-verbose=true
+nick=Lisa
+port=56789
 disableui=true
 publicnetworking=false
 uploadlimit=0
+verbose=false
 disablebroadcasts=true
+disablercon=true
 lanOnly=true
