- Fixed #200 - Fixed #197 - Added test for project work synchronization - Added test for big file copy (fails!!) - Refactored Folder sync/scan method

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -114,8 +114,10 @@ dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
 dialog.synchronization.choose=Please choose your sync action on
-dialog.synchronization.send_and_receive_changes=Send and receive changes
-dialog.synchronization.send_own_changes=Send own changes
+dialog.synchronization.sychronizing=Synchronizing...
+dialog.synchronization.receive_changes=Receive changes
+dialog.synchronization.send_and_receive_changes=Publish and receive changes
+dialog.synchronization.send_own_changes=Publish own changes
 dialog.synchronization.title=Project synchronisation
 dialog.unable_to_connect_to_address=Unable to connect to {0}
 dialog.unable_to_connect_to_member=Unable to connect to {0}
