dialogs tab added in preferences (not functional yet)

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -782,3 +782,8 @@ preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folde
 preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 wizard.basicsetup.lanonly=LAN only
+
+preferences.dialog.dialogs.title=Dialogs
+preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
+preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
+preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
