prefferences dialogs tab now functional

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -787,3 +787,4 @@ preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
+preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
