--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -788,3 +788,6 @@ preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a 
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
+
+preferences.dialog.useziponlan=Use ZIP Compression on LAN 
+preferences.dialog.useziponlan.tooltip=Enable if files to tranfer are easy to compress (this may effect your CPU load) 
