fixed #254, removed unused class, formatted

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -790,4 +790,6 @@ preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filen
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
 
 preferences.dialog.useziponlan=Use ZIP Compression on LAN 
-preferences.dialog.useziponlan.tooltip=Enable if files to tranfer are easy to compress (this may effect your CPU load) 
+preferences.dialog.useziponlan.tooltip=Enable if files to tranfer are easy to compress (this may effect your CPU load)
+preferences.dialog.dyndnsmanager.nomatch.title=The entered DynDns does not match to this host. 
+preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.\nAre you sure you want to continue with it? 
