--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -795,3 +795,4 @@ preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match 
 
 preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
+preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
